serviceability/tmtools/jstat/GcCapacityTest.java fails with Exception: java.lang.RuntimeException: OGCMN > OGCMX (min generation capacity > max generation capacity)

XMLWordPrintable

    • gc
    • team
    • windows

        Test serviceability/tmtools/jstat/GcCapacityTest.java fails with
        ----------messages:(5/327)----------
        command: main -XX:+UsePerfData -Xmx128M GcCapacityTest
        reason: User specified action: run main/othervm -XX:+UsePerfData -Xmx128M GcCapacityTest
        Mode: othervm [/othervm specified]
        Additional options from @modules: --add-modules java.base --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
        elapsed time (seconds): 1.105
        ----------configuration:(4/115)----------
        Boot Layer
          add modules: java.base
          add exports: java.base/jdk.internal.misc ALL-UNNAMED

        ----------System.out:(7/615)----------
        [2019-06-22T08:07:50.324854800Z] Gathering output for process 42680
        [2019-06-22T08:07:50.837547300Z] Waiting for completion for process 42680
        [2019-06-22T08:07:50.838524Z] Waiting for completion finished for process 42680
        Process output: Exit code: 0
        stdout: NGCMN NGCMX NGC S0C S1C EC OGCMN OGCMX OGC OC MCMN MCMX MC CCSMN CCSMX CCSC YGC FGC CGC
             0.0 43648.0 43648.0 4352.0 4352.0 34944.0 31611424873664.1 87424.0 87424.0 87424.0 0.0 1056768.0 0.0 0.0 1048576.0 0.0 0 0 -
        stderr:
        ----------System.err:(15/1095)----------
        java.lang.RuntimeException: OGCMN > OGCMX (min generation capacity > max generation capacity)
        at utils.JstatResults.assertThat(JstatResults.java:172)
        at utils.JstatGcCapacityResults.assertConsistency(JstatGcCapacityResults.java:106)
        at GcCapacityTest.main(GcCapacityTest.java:46)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
        at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
        at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
        at java.base/java.lang.reflect.Method.invoke(Method.java:567)
        at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
        at java.base/java.lang.Thread.run(Thread.java:830)

        JavaTest Message: Test threw exception: java.lang.RuntimeException: OGCMN > OGCMX (min generation capacity > max generation capacity)
        JavaTest Message: shutting down test

        STATUS:Failed.`main' threw exception: java.lang.RuntimeException: OGCMN > OGCMX (min generation capacity > max generation capacity)
        ----------rerun:(46/6244)*----------
        cd 'T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_serviceability\\scratch\\1' && \\

              Assignee:
              Stefan Karlsson
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: